--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,13 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+#root {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -32,6 +39,11 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+}
+
+
+html, body, #root {
+  height: 100%;
 }
 
 h1 {
